--- a/src/main/resources/static/css/quenmatkhau.css
+++ b/src/main/resources/static/css/quenmatkhau.css
@@ -14,8 +14,8 @@
 }
 .main-quenmatkhau{
     width: 100%;
-    height: 634px;
-    background-image: url("/assets/img/banner.jpg");
+    height: 750px;
+    background-image: url("/img/banner.jpg");
 }
 .main-quenmatkhau .overlay{
    
