--- a/src/main/resources/templates/web/loggin.html
+++ b/src/main/resources/templates/web/loggin.html
@@ -83,8 +83,8 @@
 						name="submit">
 
 					<div style="margin-left: 75px;" class="tacvu">
-						<a style="border-right: 1px solid #fff;" class="qmk-btn" href="#">Quên
-							mật khẩu</a> <a class="qmk-btn" href="/dangky">Tạo tài khoản mới</a>
+						<a style="border-right: 1px solid #fff;" class="qmk-btn" href="/forgot_password">Quên
+							mật khẩu?</a> <a class="qmk-btn" href="/dangky">Tạo tài khoản mới</a>
 					</div>
 				</form>
 			</div>
