--- a/src/main/resources/templates/web/register.html
+++ b/src/main/resources/templates/web/register.html
@@ -69,10 +69,9 @@
 				</div>
 
 				<div class="form-control agileinfo">
-					<input type="number" class="lock" name="sdt"
-						placeholder="Số điện thoại (0123-456-789)" id="sodienthoai">
+					<input type="tel" class="lock" name="sdt"
+						placeholder="Số điện thoại (012 345 6789)" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" id="sodienthoai">
 				</div>
-
 				<div class="form-control agileinfo">
 					<input type="password" class="lock" name="matKhau"
 						placeholder="Mật khẩu" id="password1" required="">
