--- a/src/main/resources/templates/web/xem-giao-trinh.html
+++ b/src/main/resources/templates/web/xem-giao-trinh.html
@@ -131,6 +131,10 @@
 
 						</div>
 
+						<div style="width: 100%;" class="mo-ta-giao-trinh">
+							<a class="btn-taoroom" th:href="@{'/danggiaotrinh?id=' + ${lopId}}" th:if="${role == 2}">Đăng giáo trình</a>
+						</div>
+
 						<div style="width: 100%;" class="file-tai-lieu">
 							<strong style="padding: 0px 38px; line-height: 26px;">File
 								tài liệu môn học</strong>
