--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -165,7 +165,38 @@
 
                 </div>
                 <div class="inf-giasu">
-                    <script src="/js/web/taikhoan/giasunoibat.js"></script>
+                    <div class="gia-su">
+                        <a href="#"><img src="/img/user1.png"></a>
+                        <p class="name-gia-su">Phan Văn Lương</p>
+                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
+                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 8.0 </p>
+                        <button href="#" class="btn-md">Mời dạy</button>
+                    </div>
+
+                    <div class="gia-su">
+                        <a href="#"><img src="/img/user1.png"></a>
+                        <p class="name-gia-su">Đặng Văn Thịnh</p>
+                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
+                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 8.0 </p>
+                        <button href="#" class="btn-md">Mời dạy</button>
+                    </div>
+
+                    <div class="gia-su">
+                        <a href="#"><img src="/img/user1.png"></a>
+                        <p class="name-gia-su">Nguyễn Minh Tân</p>
+                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
+                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 8.0 </p>
+                        <button href="#" class="btn-md">Mời dạy</button>
+                    </div>
+
+                    <div class="gia-su">
+                        <a href="#"><img src="/img/user1.png"></a>
+                        <p class="name-gia-su">Mai Thu Trang</p>
+                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
+                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 8.0 </p>
+                        <button href="#" class="btn-md">Mời dạy</button>
+                    </div>
+                    <a href="#" class="see-more"> Xem thêm </a>
                 </div>
                 
                 <div class="sub-content">
