--- a/src/main/resources/templates/web/hienthibaikt.html
+++ b/src/main/resources/templates/web/hienthibaikt.html
@@ -113,6 +113,10 @@
 
 						</div>
 
+						<div style="width: 100%;" class="mo-ta-giao-trinh">
+							<a class="btn-taoroom" th:href="@{'/upbaikt?id=' + ${lopId}}" th:if="${role == 2}">Đăng bài tập</a>
+						</div>
+
 						<div style="width: 100%;" class="file-tai-lieu">
 							<strong style="padding: 0px 12px; line-height: 26px;">
 								Nội dung đề bài kiểm tra</strong>
