--- a/src/main/resources/templates/web/loponline.html
+++ b/src/main/resources/templates/web/loponline.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script src="/js/web/lop/tenlopbyid.js"></script>
     <title>Chi tiết lớp học</title>
 </head>
 <body>
@@ -36,14 +36,18 @@
                 <hr style="width: 100%;opacity: 0.8;float: left;" color="#069d86">
              </div>
              
-                <div style="margin-bottom: 20px;width: 100%; height: 650px;" class="loponl-conten">
+             <div style="margin-bottom: 20px;width: 100%; height: 300px;" class="loponl-conten" th:if="${role == 1}">
+                <script src="/js/web/lop/loponlnguoihoc.js"></script>
+            </div>
+
+                <div style="margin-bottom: 20px;width: 100%; height: 650px;" class="loponl-conten" th:if="${role == 2}">
                     <script src="/js/web/lop/loponlnguoiday.js"></script>
                 </div>
             
          </div>
          
          <!-- right-content -->
-
+         <p id="tenlop" style="display: none;"></p>
         </div>
         <!-- content -->
 
@@ -57,5 +61,7 @@
         </div>
         <!-- footer -->
     </div>
+    <script src="/js/web/lop/taoroom.js"></script>
+    
 </body>
 </html>
