--- a/src/main/resources/templates/web/up-giao-trinh.html
+++ b/src/main/resources/templates/web/up-giao-trinh.html
@@ -91,10 +91,13 @@
                 <h4 style="padding: 10px 8px;width: 222px;color: #fff;background-color: #069d86;font-weight: bold;">SOẠN GIÁO TRÌNH</h4>
                 <hr style="width: 75.8%;opacity: 0.8;float: right;" color="#069d86">
              </div>
-             <div class="text-success">
-					<h3>[[${message}]]</h3>
-				</div>
+             
              <div class="body-block body-blocks">
+                <div th:class="@{${alert} + '-alert-linh2'}">
+                    <span class="closebtn-linh"
+                        onclick="this.parentElement.style.display='none';">&times;</span> <strong>[[${message}]]</strong>
+                </div>
+
                 <form th:action="@{'/danggiaotrinh?idlop=' + ${lopId}}" id="update-profile-form" action="" method="POST" modelattribute="giaotrinh" enctype="multipart/form-data">
 
                     <div  class="info-step-1">
