--- a/src/main/resources/templates/web/userinformation.html
+++ b/src/main/resources/templates/web/userinformation.html
@@ -35,31 +35,31 @@
                      </div>
                      <div class="name-user">
                         
-                         <h6 style="margin-bottom: 30px ;margin-top: 20px;margin-left: 210px;color: #069d86;font-size: 18px;">[[${taiKhoan.hoTen}]] <a style="color: #069d86;margin-left: 4px;" href="/suathongtin"><i class="fas fa-file-signature"></i></a></h6>
+                         <h6 style="margin-bottom: 30px ;margin-top: 20px;margin-left: 210px;color: #069d86;font-size: 18px;">[[${taiKhoan.hoTen}]] <a style="color: #483f34;margin-left: 4px;" href="/suathongtin"><i class="fas fa-file-signature"></i></a></h6>
                          
                      </div>
                      <hr style="width: 84%;opacity: 0.8;;float: right;" >
                      <i style="margin-bottom: 10px;margin-top: 10px;margin-left: 200px;" class="fas fa-book"></i>
-                     <hr style="width: 83%;opacity: 0.8;;float: right;" >
+                     <p style="font-weight: bold;margin-top: 0px;width: 350px;margin-left: 200px;">Bạn đang là: [[${taiKhoan.loai.tenLoai}]]</p>
+                     
                      <div>
-                        <p style="width: 200px;margin-left: 200px;color:#069d86 ;margin-top: 10px;"><i class="fas fa-map-marker-alt"></i> Địa chỉ: [[${taiKhoan.tinhThanh.tenTinh}]]</p>
+                        <p style="width: 200px;margin-left: 200px;color:#069d86 ;margin-top: 30px;"><i class="fas fa-map-marker-alt"></i> Địa chỉ: [[${taiKhoan.tinhThanh.tenTinh}]]</p>
 
                             <p style="font-weight: bold;margin-top: 0px;width: 350px;margin-left: 200px;"><i style="font-size: 20px;margin-right: 2px;" class="fas fa-briefcase"></i>Hình thức dạy/học: Trực tuyến</p>
                            
                      </div>
-                     <hr style="margin-top: 10px;margin-bottom: 16px;width: 83%;opacity: 0.8;;float: right;" >
-                     <a style="text-decoration: none;margin-left: 200px;margin-top: 300px;background-color: #ff961e;border: none;border-radius: 3px;padding: 10px 10px;;color: #fff;" href="#">Tìm lớp dạy</a>
                      
                     </section>
                     <div style="margin-top: 20px;" class="user-decription">
-                        <h4 style="padding: 8px 8px;width: 182px;color:#ffF;font-weight: bold;background-color: #069d86;">THÔNG TIN</h4>
+                        <h4 style="padding: 8px 8px;width: 202px;color:#ffF;font-weight: bold;background-color: #069d86;">THÔNG TIN CÁ NHÂN</h4>
                         <hr style="width: 84%;opacity: 0.8;;float: right;" color="#069d86">
-                        <p style="margin-top: 20px;font-weight: bold;">Giới thiệu chung và kinh nghiệm gia sư, giảng dạy</p><br>
-                        <p style="font-weight: bold;margin-bottom: 15px;">Gia sư đang là</p>
+                        <p style="margin-top: 20px;font-weight: bold;">Mô tả:</p>
+                        <p>[[${taiKhoan.moTa}]]</p>
+                        
                     </div>
                     <div style="width: 100%;height: 400px;" class="schedule">
                         <div class="img-teacher">
-                            <h4 style="padding: 8px 8px;width: 182px;color: #fff;background-color: #069d86;font-weight: bold;">HÌNH ẢNH</h4>
+                            <h4 style="padding: 8px 8px;width: 182px;color: #fff;background-color: #069d86;font-weight: bold;">BẰNG CẤP</h4>
                         <hr style="width: 84%;opacity: 0.8;;float: right;" color="#069d86">
                         <p style="margin-left: 8px;width: 100%; margin-top: 20px;color: #069d86;">Upload ảnh giới thiệu về bản thân hoặc mô tả các chương trình học...</p> <br>
                         <p style="color: #069d86;margin-left: 8px;" >Chưa có hình ảnh nào để hiển thị</p>
