--- a/src/main/resources/templates/admin/qlgiaodich.html
+++ b/src/main/resources/templates/admin/qlgiaodich.html
@@ -103,6 +103,11 @@
 								<i class="fas fa-angle-down"></i>
 							</div>
 						</a>
+						<a class="nav-link collapsed" href="/admin/quanlyphanhoi" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Quản lý phản hồi
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
 					</div>
 				</div>
 
