--- a/src/main/resources/templates/admin/qlphanhoi.html
+++ b/src/main/resources/templates/admin/qlphanhoi.html
@@ -98,8 +98,8 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-12">
-						<center><h1>Quản lý môn học</h1></center>
-						<a href="/admin/quanlymonhoc/themmonhoc"> Thêm môn học</a>
+						<center><h1>Quản lý phản hồi</h1></center>
+						
 							<table class="table table-bordered dataTable" id="dataTable"
 								width="100%" cellspacing="0" role="grid"
 								aria-describedby="dataTable_info" style="width: 100%;">
@@ -112,23 +112,22 @@
 										<th class="sorting" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1"
 											aria-label="Position: activate to sort column ascending"
-											style="width: 151px;">Tên môn học</th>
+											style="width: 151px;">Email</th>
 										<th class="sorting" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1"
 											aria-label="Salary: activate to sort column ascending"
-											style="width: 58px;">Chức năng</th>
+											style="width: 58px;">Nội dung</th>
 									</tr>
 								</thead>
 
 								<tbody>
-									<th:block th:each="mon: ${mon}">
+									<th:block th:each="phanhoi: ${phanhoi}">
 										<tr role="row" class="odd">
-										<td class="sorting_1">[[${mon.mon_Id}]]</td>
-										<td>[[${mon.tenMon}]]</td>
+										<td class="sorting_1">[[${phanhoi.phanHoi_Id}]]</td>
+										<td>[[${phanhoi.email}]]</td>
+										<td>[[${phanhoi.noiDung}]]</td>
 
-										<td>
-										<a th:href="@{'/admin/quanlymonhoc/suamonhoc?id=' + ${mon.mon_Id}}" class="btn btn-danger"><i class="fas fa-edit"></i></a>&nbsp
-										<a th:href="@{'/admin/quanlymonhoc/xoamonhoc?id=' + ${mon.mon_Id}}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a></td>
+										
 									</tr>
 
 									</th:block>
