--- a/src/main/resources/templates/admin/suamonhoc.html
+++ b/src/main/resources/templates/admin/suamonhoc.html
@@ -106,7 +106,7 @@
                                     	</tr>
                                     	<tr>
                                     		<td><p>Tên môn học</p></td>
-                                    		<td><input type="text" name="tenMon" ></td>
+                                    		<td><input type="text" name="tenMon" title="Please enter your First Name" required="" ></td>
                                     	</tr>
                                     
                                     </table>
