--- a/src/main/resources/templates/admin/themmonhoc.html
+++ b/src/main/resources/templates/admin/themmonhoc.html
@@ -102,11 +102,11 @@
                                     <table style="margin-right: 100px">
                                     	<tr>
                                     		<td><p>ID môn học</p></td>
-                                    		<td><input type="text" disabled  th:value="${mon.mon_Id}" name="mon_Id"></td>
+                                    		<td><input type="text" disabled  th:value="${mon.mon_Id}" name="mon_Id"  ></td>
                                     	</tr>
                                     	<tr>
                                     		<td><p>Tên môn học</p></td>
-                                    		<td><input type="text" name="tenMon" th:value="${mon.tenMon}"></td>
+                                    		<td><input type="text" name="tenMon" th:value="${mon.tenMon}" title="Please enter your First Name" required=""></td>
                                     	</tr>
                                     
                                     </table>
