--- a/src/main/resources/templates/web/userinformation.html
+++ b/src/main/resources/templates/web/userinformation.html
@@ -55,6 +55,13 @@
                         <hr style="width: 84%;opacity: 0.8;;float: right;" color="#069d86">
                         <p style="margin-top: 20px;font-weight: bold;">Mô tả:</p>
                         <p>[[${taiKhoan.moTa}]]</p>
+                       
+                        <p style="margin-top: 20px;font-weight: bold;">Số điện thoại: [[${taiKhoan.sdt}]]</p>
+                        <p style="margin-top: 20px;font-weight: bold;">Số dư: [[${taiKhoan.soDu}]]</p>
+                        <p style="margin-top: 20px;font-weight: bold;">Nghề nghiệp: [[${taiKhoan.ngheNghiep.tenNgheNghiep}]]</p>
+                        
+                        
+                        
                         
                     </div>
                     <div style="width: 100%;height: 400px;" class="schedule">
